Notifier was not visible - Fixed css properties and released v2.4.1

--- a/src/content_scripts/cs.css
+++ b/src/content_scripts/cs.css
@@ -11,13 +11,13 @@
   top: 0;
   cursor: pointer;
   width: 100%;
-  height: 35px;
-  line-height: 35px;
+  height: 50px;
+  line-height: 50px;
   font-size: 17px;
   font-weight: bolder;
   color: black;
   display: none;
-  z-index: 200;
+  z-index: 10000;
   text-align: center;
 }
 
